# Elysian-Physics-Engine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Physics Engine.vcxproj  Physics Engine.vcxproj.filters  README.md
cmake/: PhysicsEngineConfig.cmake.in
demo/: main.cpp
include/: Collider2D.h  CollisionDetector.h  CollisionInfo.h  CollisionResolver.h  Geometry2D.h  PhysicsSystem.h  Rigidbody.h  ShapeTypes.h  Transform.h  matrices.h  vectors.h
include/PhysicsEngine/: Export.h  PhysicsEngine.h  Version.h.in
src/: AABB.cpp  AABB.h  Application.cpp  Application.h  Ball.cpp  Ball.h  Circle.cpp  Circle.h  Collider2D.cpp  Collider2D.h  Collision.cpp  Collision.h  CollisionDetecter.cpp  CollisionDetecter.h  CollisionDetector.cpp  CollisionDetector.h  CollisionInfo.cpp  CollisionInfo.h  CollisionResolver.cpp  CollisionResolver.h  Geometry2D.cpp  Geometry2D.h  Gravity.cpp  Gravity.h  Object.cpp  Object.h  PhysicsObject.cpp  PhysicsObject.h  PhysicsSystem.cpp  PhysicsSystem.h  Rectangle.cpp  Rectangle.h  Renderer.cpp  Renderer.h  Rigidbody.cpp  Rigidbody.h  ShapeTypes.h  Transform.cpp  Transform.h  matrices.cpp  (+3 more)
tests/: CMakeLists.txt  TestCollision.cpp  TestGeometry.cpp  TestMacros.h  TestMath.cpp  main.cpp
